# QtVulkan

./: .gitignore  CMakeLists.txt  Main.qml  README.md  README_EN.md  build_and_run.bat  build_and_run.sh  main.cpp
shaders/: sphere.frag  sphere.vert
src/: Camera.cpp  Camera.h  Physics.cpp  Physics.h  SceneController.cpp  SceneController.h  Transform.cpp  Transform.h  TypesData.h  VulkanCore.cpp  VulkanCore.h  VulkanWindow.cpp  VulkanWindow.h  vk3dObject.cpp  vk3dObject.h  vk3dPyramid.cpp  vk3dPyramid.h  vk3dSphere.cpp  vk3dSphere.h
